Adding 'Gooroom-Blue' icon theme
Change-Id: Ice834a101b72f2d1497a53b5556fae378278068a

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Standards-version: 3.7.2
 Package: gooroom-icon-themes
 Depends: ${misc:Depends},
          hicolor-icon-theme,
+         arc-icon-theme,
          libgtk-3-bin,
          librsvg2-common
 Architecture: all
