Added gooroom theme based on Papirus theme
Change-Id: Ib9ff8d5d31ef8f2618172b21cba69fc881add4ec

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,8 @@ Package: gooroom-icon-themes
 Depends: ${misc:Depends},
          hicolor-icon-theme,
          arc-icon-theme,
+         faenza-icon-theme,
+         papirus-icon-theme,
          libgtk-3-bin,
          librsvg2-common
 Architecture: all
